# minecraft_downloader

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  delete_old_release  provision
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust-release.yml  rust.yml
.travis/: clean_release  provision
src/: args.rs  args.yml  main.rs
