[package]
name = "minecraft_downloader"
description = "Download Minecraft's server.jar file"
version = "0.5.1"
edition = "2018"
homepage = "https://github.com/marblenix/minecraft_downloader"
repository = "https://github.com/marblenix/minecraft_downloader"
keywords = ["minecraft", "management", "utility"]
license = "MIT"
publish = false

[dependencies]
bytes = "0.5"
rust-crypto = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.clap]
features = ["yaml"]
version = "2"

[dependencies.reqwest]
features = ["blocking", "json"]
version = "0.10"

# Windows cannot statically link openssl libraries
[target.'cfg(unix)'.dependencies.openssl]
features = ["vendored"]
version = "0.10"
