[package]
name = "minecraft_downloader"
description = "Download Minecraft's server.jar file"
version = "0.6.0"
edition = "2021"
homepage = "https://github.com/marblenix/minecraft_downloader"
repository = "https://github.com/marblenix/minecraft_downloader"
keywords = ["minecraft", "management", "utility"]
license = "MIT"
publish = false

[dependencies]
bytes = "1"
lazy_static = "1"
rust-crypto = "0.2"
serde_derive = "1"
serde_json = "1"
url = "2"

[dependencies.clap]
features = ["wrap_help"]
version = "2"

[dependencies.reqwest]
features = ["blocking", "json"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1"

# Windows cannot statically link openssl libraries
[target.'cfg(unix)'.dependencies.openssl]
features = ["vendored"]
version = "0.10"
